Fix missing permission and add ability to set Deployment update strategy.
Signed-off-by: Nik Hodgkinson <nik.hodgkinson@starburstdata.com>

--- a/deploy/charts/kube-oidc-proxy/values.yaml
+++ b/deploy/charts/kube-oidc-proxy/values.yaml
@@ -91,6 +91,13 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
+# Allows setting the Deployment update strategy
+#rollingUpdateStrategy:
+#  type: RollingUpdate
+#  rollingUpdate:
+#    maxSurge: 34%
+#    maxUnavailable: 33%
+
 # Enable Pod Disruption Budget
 podDisruptionBudget:
   enabled: false
