--- a/deploy/charts/kube-oidc-proxy/templates/clusterrole.yaml
+++ b/deploy/charts/kube-oidc-proxy/templates/clusterrole.yaml
@@ -17,6 +17,7 @@ rules:
   - "authentication.k8s.io"
   resources:
   - "userextras/scopes"
+  - "userextras/remote-client-ip"
   - "tokenreviews"
   verbs:
   - "create"
