--- a/deploy/charts/kube-oidc-proxy/templates/deployment.yaml
+++ b/deploy/charts/kube-oidc-proxy/templates/deployment.yaml
@@ -13,6 +13,9 @@ spec:
     matchLabels:
       app.kubernetes.io/name: {{ include "kube-oidc-proxy.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
+  {{- if .Values.rollingUpdateStrategy }}
+  strategy: {{ .Values.rollingUpdateStrategy | nindent 4}}
+  {{ end }}
   template:
     metadata:
       labels:
