fix(helm): helm deploy oidc-required-claim option, typo error
Signed-off-by: Huy TaeYoung Kim <kty1965@gmail.com>

--- a/deploy/charts/kube-oidc-proxy/templates/deployment.yaml
+++ b/deploy/charts/kube-oidc-proxy/templates/deployment.yaml
@@ -60,7 +60,7 @@ spec:
           - "--oidc-signing-algs=$(OIDC_SIGNING_ALGS)"
           {{ end }}
           {{- if .Values.oidc.requiredClaims }}
-          - "--oidc-signing-algs=$(OIDC_REQUIRED_CLAIMS)"
+          - "--oidc-required-claim=$(OIDC_REQUIRED_CLAIMS)"
           {{ end }}
           {{- if .Values.tokenPassthrough.enabled }}
           - "--token-passthrough"
