--- a/deploy/charts/kube-oidc-proxy/templates/clusterrole.yaml
+++ b/deploy/charts/kube-oidc-proxy/templates/clusterrole.yaml
@@ -19,6 +19,10 @@ rules:
   - "userextras/scopes"
   - "userextras/remote-client-ip"
   - "tokenreviews"
+  # to support end user impersonation
+  - "userextras/originaluser.jetstack.io-user"
+  - "userextras/originaluser.jetstack.io-groups"
+  - "userextras/originaluser.jetstack.io-extra"
   verbs:
   - "create"
   - "impersonate"
