--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,21 +39,21 @@ jobs:
       
       
       
-#      -
-#        name: Login to DockerHub
-#        uses: docker/login-action@v1 
-#        with:
-#          username: ${{ secrets.OU_REG_USER }}
-#          password: ${{ secrets.OU_REG_PASSWORD }}
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.OU_REG_USER }}
+          password: ${{ secrets.OU_REG_PASSWORD }}
       
       
       
       
-#      -
-#        name: Build and push
-#        id: docker_build
-#        uses: docker/build-push-action@v2
-#        with:
-#          push: true
-#          tags: docker.io/tremolosecurity/openunison-k8s-operator
+      -
+        name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${{ secrets.OU_CONTAINER_DEST }}
           
