for #8 docker build isn't working from action

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,7 +34,7 @@ jobs:
         run: make test
 
       - name: build executable
-        run: make build
+        run: make build; ls; ls bin
       
       
       
