--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,8 +30,8 @@ jobs:
       - name: install go-junit
         run: go get -u github.com/jstemmer/go-junit-report
 
-      #- name: run tests
-      #  run: make test
+      - name: run tests
+        run: make test
 
       - name: build executable
         run: make build; ls; ls bin
