--- a/deploy/charts/kube-oidc-proxy/templates/ingress.yaml
+++ b/deploy/charts/kube-oidc-proxy/templates/ingress.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "kube-oidc-proxy.fullname" . -}}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
@@ -28,9 +28,12 @@ spec:
         paths:
         {{- range .paths }}
           - path: {{ . }}
+            pathType: Prefix
             backend:
-              serviceName: {{ $fullName }}
-              servicePort: https
+              service:
+                name: {{ $fullName }}
+                port:
+                  name: https
         {{- end }}
   {{- end }}
 {{- end }}
