support ingressClassName for v1 Ingress
Signed-off-by: Kingdon Barrett <kingdon@weave.works>

--- a/deploy/charts/kube-oidc-proxy/templates/ingress.yaml
+++ b/deploy/charts/kube-oidc-proxy/templates/ingress.yaml
@@ -21,6 +21,9 @@ spec:
       secretName: {{ .secretName }}
   {{- end }}
 {{- end }}
+{{- if .Values.ingress.ingressClassName }}
+  ingressClassName: {{ .Values.ingress.ingressClassName | quote }}
+{{- end }}
   rules:
   {{- range .Values.ingress.hosts }}
     - host: {{ .host | quote }}
