--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,7 +46,16 @@ jobs:
           username: ${{ secrets.OU_REG_USER }}
           password: ${{ secrets.OU_REG_PASSWORD }}
       
-      
+      - name: Login to container Registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: ghcr.io
+
+      - name: downcase REPO
+        run: |
+          echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
       
       
       -
@@ -56,5 +65,7 @@ jobs:
         with:
           context: "."
           push: true
-          tags: ${{ secrets.OU_CONTAINER_DEST }}
+          tags: |
+            ${{ secrets.OU_CONTAINER_DEST }}
+            ghcr.io/${{ env.REPO }}:latest
           
