made apiVersion depended on the k8s version
Signed-off-by: Ildar Valiullin <preved.911@gmail.com>

--- a/deploy/charts/kube-oidc-proxy/values.yaml
+++ b/deploy/charts/kube-oidc-proxy/values.yaml
@@ -84,7 +84,9 @@ ingress:
     # kubernetes.io/tls-acme: "true"
   hosts:
     - host: chart-example.local
-      paths: []
+      paths:
+        - path: /
+          pathType: Prefix
 
   tls: []
   #  - secretName: chart-example-tls
